# pcsc-rust

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  valgrind.supp
.github/workflows/: ci.yml
examples/: cancel.rs  connect.rs  list-readers.rs  monitor.rs
pcsc/: Cargo.toml
pcsc-sys/: Cargo.toml  build.rs
pcsc-sys/src/: lib.rs
pcsc/examples/: cancel.rs  connect-owned.rs  connect.rs  list-readers-owned.rs  list-readers.rs  monitor.rs  readme.rs
pcsc/src/: lib.rs  tests.rs
src/: ffi.rs  lib.rs
