[package]
name = "pcsc-sys"
description = "Low-level bindings to the PC/SC C API"
version = "1.3.0"
license = "MIT"
keywords = ["pcsc", "smartcard"]
categories = ["hardware-support", "external-ffi-bindings"]
documentation = "https://docs.rs/pcsc-sys"
repository = "https://github.com/bluetech/pcsc-rust"
homepage = "https://github.com/bluetech/pcsc-rust"
authors = ["Ran Benita <ran@unusedvar.com>"]
build = "build.rs"
links = "pcsc"
rust-version = "1.56"
edition = "2021"

[build-dependencies]
pkg-config = "0.3.9"
