[package]
name = "pcsc"
description = "Bindings to the PC/SC API for smart card communication"
version = "1.0.1"
license = "MIT"
keywords = ["pcsc", "smartcard"]
categories = ["hardware-support", "api-bindings"]
documentation = "https://docs.rs/pcsc"
repository = "https://github.com/bluetech/pcsc-rust"
homepage = "https://github.com/bluetech/pcsc-rust"
readme = "../README.md"
authors = ["Ran Benita <ran234@gmail.com>"]

[dependencies]
bitflags = "1"
pcsc-sys = { version = "1.0.1", path = "../pcsc-sys" }
