[package]
name = "pcsc"
description = "Bindings to the PC/SC API for smart card communication"
version = "2.8.0"
license = "MIT"
keywords = ["pcsc", "smartcard"]
categories = ["hardware-support", "api-bindings"]
documentation = "https://docs.rs/pcsc"
repository = "https://github.com/bluetech/pcsc-rust"
homepage = "https://github.com/bluetech/pcsc-rust"
readme = "../README.md"
authors = ["Ran Benita <ran@unusedvar.com>"]
rust-version = "1.38"

[dependencies]
bitflags = "1.2.1"
pcsc-sys = { version = "1.2.0", path = "../pcsc-sys" }
